styles/index.css
/* google font style */
.Poppins{
  font-family: Poppins;
  font-style: normal;
}

/* common style */
main{
    max-width: 1200px;
    margin: 0 auto;
    color: rgba(58, 58, 58, 1);
}
a{
    text-decoration: none;
    color: rgba(58, 58, 58, 1);
}
header{
    margin: 0px 10px;
}
.fa-arrow-right{
    margin-left: 8 px;
}

/* navbar related style */
.navbar{
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.nav-container{
    display: flex;
    list-style: none;
    gap: 34px;
    align-items: center;
}
.logo{
    font-size: 1.5rem;
    font-weight: 700;
}
.nav-item{
    font-size: 1rem;
    font-weight: 600;
}
.search{
    font-size: 1.5rem;
}
.cart{
    font-size: 2rem;
}

/* hero section style */
.hero-section{
    display: flex;
    gap: 10%;
    align-items: center;
    margin: 60px auto;
}
.hero-heading{
    font-size: 3.33rem;
    font-weight: 700;
    margin-bottom: 16px;
}
.hero-contain p{
    font-size: 1rem;
    font-weight: 600;
    margin-top: 0px;
}
.hero-img{
    background-image: url(../images/Circle\ design.svg);
    background-size: 100%;
    background-repeat: no-repeat;
}
.banner-img{
    margin: 30px 2px;
    width: calc(100% - 30px);
}
.hero-btn{
    background-color: rgba(224, 44, 109, 1);
    padding: 10px 24px;
    border: none;
    border-radius: 41px;
    color: white;
    font-weight: 700;
    align-items: center;
    margin-top: 8px;
}

/* collaboration brand style */
.collab-brand{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 50px;
    padding: 30px 60px;
}
.brand-border{
    height: 1px;
    border: none;
    background: linear-gradient(to right, rgb(192, 204, 218, 0.1), rgb(192, 204, 218, 0.6), rgb(192, 204, 218, 0.1));
}


/* collection section style */
.popular-collections{
    margin: 100px 76px;
}
.collection-heading{
    text-align: center;
    font-size: 1.75rem;
    font-weight: 600;
}
.collection-container{
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 30px;
}
.product-card{
    border-radius: 10px;
    box-shadow: 0 0 40px rgba(0, 0, 0, 0.15);
    padding: 15px;
}
.product-card img{
    width: 100%;
}
.product-name{
    font-size: 1.75rem;
    font-weight: 500px;
    margin: 0;
}
.product-price{
    font-size: 1.75rem;
    font-weight: 400;
    margin: 10px 0;
}
.star-rating{
    display: flex;
    align-items: center;
    gap: 10px;
    margin: 0px;
}
.fa-star, .fa-star-half-stroke{
    color: gold;
    padding-bottom: 3px;
}
.star-rating p{
    font-weight: 700;
    color: rgba(94, 99, 102, 0.8);
    margin: 5px; 
}
.product-desc{
    font-weight: 700;
    color: rgba(94, 99, 102, 0.8);
    margin: 0px;
}
.see-more{
    font-size: 1.5rem;
    color: rgba(224, 44, 109, 0.87);
    text-align: right;
}

/* featured products related style */
.featured-products{
    display: flex;
    align-items: center;
    max-width: 1110px;
    margin: 0 auto;
    gap: 8%;
    margin-bottom: 100px;
}
.featured-heading{
    font-size: 2.4rem;
    font-weight: 700;
    margin: 0px;
}
.featured-desc{
    color: rgba(108, 108, 108, 1);
    margin: 16px 0px;
}
.join-btn{
    font-weight: 700;
    color: white;
    background-color: rgba(224, 44, 109, 1);
    padding: 10px 24px;
    border: none;
}

/* footer section */
footer{
    background-color: rgba(10, 8, 38);
    color: white;
    text-align: center;
    padding: 50px;
}
.footer-heading{
    font-size: 1.5rem;
    font-weight: 700;
    margin: 0;
}
.footer-desc{
    font-weight: 400;
    margin: 6px auto;
}
.footer-icons{
    display: flex;
    justify-content: center;
    gap: 16px;
    padding-top: 10px;
}
.icon{
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: rgba(255, 255, 255, 0.1);
    width: 32px;
    height: 32px;
    border-radius: 50%;
}


/* responsive for small device */
@media screen and (max-width: 576px) {
    body{
        margin: 0;
    }
    main{
        margin: 10px;
    }
    /* header section */
    .logo{
        margin: 10px;
    }
    .navbar{
        flex-direction: column;
    }
    .nav-container{
        padding: 0;
        justify-content: space-between;
        gap: 20px;
        margin: 0;
    }
    .nav-item{
        font-size: 0.8rem;
        font-weight: 400;
    }
    .search{
    font-size: 1rem;
    }
    .cart{
    font-size: 1.5rem;
    }
    .hero-img{
        max-width: 80%;
        margin: 0 auto;
    }
    .hero-section{
        flex-direction: column-reverse;
        padding: 10px;
        gap: 10px;
        margin: 30px 10px;
    }
    .hero-heading{
        font-size: 1.8rem;
    }
    .hero-contain{
        text-align: center;
    }
    /* colaboration section */
    .collab-brand{
        padding: 10px;
        gap: 20px 30px;
    }
    .brand-logo{
        width: 18%;
    }
    /* popular collection section */
    .popular-collections{
        margin: 30px auto;
    }
    .collection-heading{
        margin-bottom: 10px;
        font-size: 1.25rem;
    }
    .collection-container{
        grid-template-columns: repeat(1, 1fr);
    }
    /* featured products section */
    .featured-products{
        flex-direction: column-reverse;
        gap: 20px;
        text-align: center;
    }
    .featured-heading{
        font-size: 1.3rem;
    }
    .featured-image{
        max-width: calc(100% - 10px);
    }
    /* footer section */
    footer{
        padding: 30px 10px;
    }
}

